Fix z-index of nav-main

--- a/sass/src/mediaqueries/_s.scss
+++ b/sass/src/mediaqueries/_s.scss
@@ -14,9 +14,10 @@
 	}
 
 	.nav-main__select {
+		position: absolute;
 		float: right;
-		width: 49%;
 		margin-left: 0;
+		width: 49%;
 	}
 
 	.form-search {
